[package]
name = "avr-rs-rtos"
version = "0.1.0"
authors = ["yud0uhu"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "avr-rs-rtos"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
pwm-pca9685 = "0.3.1"
infrared = "0.14.1"
embedded-storage = "0.2"
heapless = { version = "0.7.16" }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies.avr-device]
version = "0.4"

[dependencies.either]
version = "1.6.1"
default-features = false

[dependencies.void]
version = "*"
default-features = false
